--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: "Archivo Black";
     position: absolute;
     bottom: 0px;
     top: 0px;
@@ -26,11 +27,11 @@ body {
 .humidity {
     position: absolute;
     width: 100%;
-    height: 40px;
+    height: 60px;
     text-align: center;
-    font-size: 30px;
+    font-size: 50px;
     color: white;
-    line-height: 40px;
+    line-height: 60px;
     border: .5px solid white;
 }
 
