--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: Verdana;
+    font-size: 20px;
     position: absolute;
     bottom: 0px;
     top: 0px;
@@ -10,37 +11,65 @@ body {
 .section-temperature,
 .section-humidity {
     position: relative;
+    font-size: 20px;
     width: 100%;
     height: 50%;
     
 }
 
 .section-temperature {
-    background: rgb(252, 198, 140);
+    background: rgb(105, 160, 210);
 }
 
-.section-humidity {
-    background: rgb(105, 160, 210);
+.section-humidity { 
+    background: rgb(252, 198, 140);
 }
 
 .temperature,
 .humidity {
     position: absolute;
     width: 100%;
-    height: 60px;
     text-align: center;
-    font-size: 50px;
+    font-size: 4em;
+    font-weight: bold;
     color: white;
-    line-height: 60px;
-    border: .5px solid white;
+}
+
+.temperature::before,
+.humidity::before {
+    margin-right: 1em;
+    font-size: .25em;
+    font-weight: normal;
+}
+
+.temperature::after,
+.humidity::after {
+    margin-left: .4em;
+    font-size: .4em;
+    font-weight: normal;
 }
 
 .temperature {
-    bottom: 0%;
+    bottom: 1%;
+}
 
+.temperature::before {
+    content: 'TEMP.';
+}
+
+.temperature::after {
+    content: '˚C';
 }
 
 .humidity {
-    top: 0%;
+    top: 1%;
+}
 
+.humidity::before {
+    content: '  RH.';
+    white-space: pre;
+}
+
+.humidity::after {
+    content: '%';
 }
