--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,8 @@ body {
 .humidity {
     position: absolute;
     width: 100%;
+    /* height: 100px;
+    line-height: 100px; */
     text-align: center;
     font-size: 4em;
     font-weight: bold;
@@ -50,7 +52,7 @@ body {
 }
 
 .temperature {
-    bottom: 1%;
+    bottom: 2%;
 }
 
 .temperature::before {
