--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,6 @@ body {
     font-size: 20px;
     width: 100%;
     height: 50%;
-    
 }
 
 .section-temperature {
@@ -76,7 +75,20 @@ body {
     content: '%';
 }
 
-iframe {
+#div-temp-curve,
+#div-rh-curve {
+    position: absolute;
     width: 100%;
-    height: 70%;
+    height: 200px;
+    background: white;
+}
+
+#div-temp-curve {
+    top: 10%;
+    background: rgb(105, 160, 210);
+}
+
+#div-rh-curve {
+    bottom: 10%;
+    background: rgb(252, 198, 140);
 }
