--- a/styles/style.css
+++ b/styles/style.css
@@ -79,16 +79,15 @@ body {
 #div-rh-curve {
     position: absolute;
     width: 100%;
-    height: 200px;
-    background: white;
+    height: 300px;
+    /* border-top: 1px solid black;
+    border-bottom: 1px solid black; */
 }
 
 #div-temp-curve {
-    top: 10%;
-    background: rgb(105, 160, 210);
+    top: 5%;
 }
 
 #div-rh-curve {
-    bottom: 10%;
-    background: rgb(252, 198, 140);
+    bottom: 5%;
 }
