--- a/styles/style.css
+++ b/styles/style.css
@@ -80,8 +80,8 @@ body {
     position: absolute;
     width: 100%;
     height: 300px;
-    /* border-top: 1px solid black;
-    border-bottom: 1px solid black; */
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
 }
 
 #div-temp-curve {
