--- a/styles/style.css
+++ b/styles/style.css
@@ -80,8 +80,8 @@ body {
     position: absolute;
     width: 100%;
     height: 300px;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
+    /* border-top: 1px solid black;
+    border-bottom: 1px solid black; */
 }
 
 #div-temp-curve {
@@ -90,4 +90,13 @@ body {
 
 #div-rh-curve {
     bottom: 5%;
+}
+
+footer {
+    position: fixed;
+    width: 100%;
+    bottom: 5px;
+    font-size: 10px;
+    text-align: center;
+    color: white;  
 }
